Criação/finalização CSS

--- a/index.HTML
+++ b/index.HTML
@@ -12,22 +12,22 @@
         <h1>Formulário</h1>
         <form>
             <div>
-                <input class="inputs" type="text" aria-placeholder="Digite seu nome">
+                <input class="inputs" type="text"   placeholder="Digite seu nome">
                 <span class="span-required">Nome deve ter no mínimo 3 caracteres</span>
             </div>
              <div>
-                <input class="inputs" type="email" aria-placeholder="Digite seu melhor email">
+                <input class="inputs" type="email" placeholder="Digite seu melhor email">
                 <span class="span-required">Digite um email válido</span>
             </div>
              <div>
-                <input class="inputs" type="password" aria-placeholder="Digite sua senha">
+                <input class="inputs" type="password" placeholder="Digite sua senha">
                 <span class="span-required">Digite uma senha com no mínimo 8 caracteres</span>
             </div>
              <div>
-                <input class="inputs" type="password" aria-placeholder="Repita a sua senha">
+                <input class="inputs" type="password" placeholder="Repita a sua senha">
                 <span class="span-required">Senhas devem ser compativeis</span>
             </div>
-            <textarea name="descricao" id="descricao" cols="30" rows="10" placeholder="Fale um pouco sobre você..."></textarea>
+            <textarea class="inputs" name="descricao" id="descricao" cols="30" rows="10" placeholder="Fale um pouco sobre você..."></textarea>
 
             <p>Sexo:</p>
             <div class="box-select">
